# check-document

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
grafana/data/: grafana.db
grafana/etc/provisioning/datasources/: datasources.yml
prometheus/: prometheus.yml
prometheus/data/chunks_head/: 000001  000002  000003  000004  000005  000006  000007
prometheus/data/wal/: 00000000  00000001  00000002  00000003  00000004  00000005  00000006  00000007  00000008  00000009  00000010
src/: run.py
src/app/: main.py  parser.py
src/app/api/: healthz.py
src/app/dependencies/: redis.py
src/app/monitoring/: metrics.py  middleware.py
src/app/routers/: docs.py
src/app/schemas/: doc.py
src/tests/: Dockerfile  conftest.py
src/tests/integration/: test_docs.py
src/tests/mocks/: FakeRedis.py
src/tests/unit/: test_parser.py
